--- a/Prototip.html
+++ b/Prototip.html
@@ -15,7 +15,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <p>_ _ _ _ _</p>
         
         <h2>Vides</h2>
-        <p id="Vides">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p id="Vides">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_</p>
         
         <h2>Lletres</h2>
         <p>_ _ _ _ _ </p>
