--- a/jocdelpenjat.html
+++ b/jocdelpenjat.html
@@ -14,7 +14,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <h1>Prototip Joc del Penjat</h1>
         <input type="text" id="lletra" name="esbrina la lletra" maxlength="1"
                placeholder="Escriu una lletra">
-        <button id="Comprovar" type="button" onclick="comprovar();">Comprovar</button>
+        <button id="Comprovar" type="button" onclick="comprovar()">Comprovar</button>
         
         <h2>Paraula</h2>
         <p id="Paraula">_ _ _ _ _</p>
