--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
 <html>
+    <link href="css/indexcss.css" rel="stylesheet" type="text/css"/>
     <head>
         <title>Experiment</title>
         
@@ -13,8 +14,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
         <h1>Index</h1>
         <img id="myImage" src="img/imgindex/istockphoto-510797946-612x612.jpg" style="width:100px"><br>
-        <a href="esdeveniments.html">esdeveniments</a><br>
-        <a href="jocdelpenjat.html">jocdelpenjat</a><br>
-        <a href="Prototip.html">Prototip</a>
+        <a href="esdeveniments.html">esdeveniments</a><br><br>
+        <a href="Prototip.html">Prototip</a><br><br>
+        <a href="penjat versió prealfa.html">penjat versió prealfa</a><br><br>
+        <a href="versió alfa.html">penjat versió alfa</a>
     </body>
 </html>
