--- a/versió alfa.html
+++ b/versió alfa.html
@@ -29,12 +29,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <h4 id = "counter" >0</h4>
         
         <div id="banderes">
-            <img id="es" src="img/es.png" alt=""/>
-            <img id="fr" src="img/fr.png" alt=""/>
-            <img id="gb" src="img/gb.png" alt=""/>
-            <img id="it" src="img/it.png" alt=""/>
-            <img id="ca" src="img/ca.png" alt=""/>
-            <img id="de" src="img/de.png" alt=""/>
+            <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20alfa.html?_x_tr_sl=auto&_x_tr_tl=es&_x_tr_hl=es&_x_tr_pto=wapp"><img id="es" src="img/es.png" alt="españish"/></a>
+            <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20alfa.html?_x_tr_sl=auto&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp"><img id="fr" src="img/fr.png" alt=""/></a>
+            <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20alfa.html?_x_tr_sl=auto&_x_tr_tl=gb&_x_tr_hl=gb&_x_tr_pto=wapp"><img id="gb" src="img/gb.png" alt=""/></a>
+            <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20alfa.html?_x_tr_sl=auto&_x_tr_tl=it&_x_tr_hl=it&_x_tr_pto=wapp"><img id="it" src="img/it.png" alt=""/></a>
+            <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20alfa.html?_x_tr_sl=auto&_x_tr_tl=ca&_x_tr_hl=ca&_x_tr_pto=wapp"><img id="ca" src="img/ca.png" alt=""/></a>
+            <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20alfa.html?_x_tr_sl=auto&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp"><img id="de" src="img/de.png" alt=""/></a>
         </div>
        
         <br><br>
