--- a/versió beta.html
+++ b/versió beta.html
@@ -8,8 +8,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <title>jocdelpenjat</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="js/penjatAlfa.js" type="text/javascript"></script>
-        <link href="css/penjatAlfa.css" rel="stylesheet" type="text/css"/>
+        <script src="js/penjatBeta.js" type="text/javascript"></script>
+        <link href="css/penjatBeta.css" rel="stylesheet" type="text/css"/>
     </head>
     <body onload = "cargar();" style =" background-image: url('img/Desert.png');
           background-size: 640px 480px; background-repeat: no-repeat;">
@@ -18,7 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                placeholder="Escriu una lletra">
         <button id="Comprovar" type="button" onclick="comprovar()">Comprovar</button>
         
-        <h2>Paraula</h2>
+        <h2>Paraula<button id="pistes" type="button" onclick="ajuda()">pistes</button></h2>
         <p id="Paraula">_ _ _ _ _</p>
         
         <h2>Vides</h2>
