--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <a href="esdeveniments.html">esdeveniments</a><br><br>
         <a href="Prototip.html">Prototip</a><br><br>
         <a href="penjat versió prealfa.html">penjat versió prealfa</a><br><br>
-        <a href="versió alfa.html">penjat versió alfa</a>
+        <a href="versió alfa.html">penjat versió alfa</a><br><br>
+        <a href="versió beta.html">penjat versió beta</a>
     </body>
 </html>
