--- a/versió beta.html
+++ b/versió beta.html
@@ -53,12 +53,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                     !document.getElementById('Teclat').hidden;" title="Mostra o Amaga"> 
             <img src="img/keyboard.png" alt="teclat"> </button>
             <button id="sons" title="On / Off" 
-           onclick="document.getElementById('off').hidden =
-                    document.getElementById('on').hidden;
-                    document.getElementById('on').hidden =
-                    document.getElementById('off').hidden;">
-            <img src="img/volumeOn.jpg" id="on" style="width:20px">
-            <img src="img/mute.jpg" id="off" style="width:20px" hidden>
+           onclick="document.getElementById('Off').hidden =
+                    document.getElementById('On').hidden;
+                    document.getElementById('On').hidden =
+                    document.getElementById('Off').hidden;">
+            <img src="img/volumeOn.jpg" id="On" style="width:20px">
+            <img src="img/mute.jpg" id="Off" style="width:20px" hidden>
             </button>
         </div>
        
