--- a/versió SQL.html
+++ b/versió SQL.html
@@ -8,10 +8,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <title>jocdelpenjat</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/penjatBeta.css" rel="stylesheet" type="text/css"/>
         <script src="js/penjatSQL.js" type="text/javascript"></script>
         <script src="js/alasql.js" type="text/javascript"></script>
         <script src="js/sql.js" type="text/javascript"></script>
-        <link href="css/penjatBeta.css" rel="stylesheet" type="text/css"/>
     </head>
     <body onload = "cargar();" style =" background-image: url('img/Desert.png');
           background-size: 640px 480px; background-repeat: no-repeat;">
@@ -49,7 +49,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20beta.html?_x_tr_sl=auto&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp"><img id="fr" src="img/fr.png" alt=""/></a>
             <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20beta.html?_x_tr_sl=auto&_x_tr_tl=gb&_x_tr_hl=gb&_x_tr_pto=wapp"><img id="gb" src="img/gb.png" alt=""/></a>
             <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20beta.html?_x_tr_sl=auto&_x_tr_tl=it&_x_tr_hl=it&_x_tr_pto=wapp"><img id="it" src="img/it.png" alt=""/></a>
-            <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20beta.html?_x_tr_sl=auto&_x_tr_tl=ca&_x_tr_hl=ca&_x_tr_pto=wapp"><img id="ca" src="img/ca.png" alt=""/></a>
+            <img id="ca" src="img/ca.png" alt="" onclick="cacatua()"/>
             <a href="https://magical--basbousa--24ab41-netlify-app.translate.goog/versi%C3%B3%20beta.html?_x_tr_sl=auto&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp"><img id="de" src="img/de.png" alt=""/></a>
             <button id="TECLAT" type="button" onclick="document.getElementById('Teclat').hidden =
                     !document.getElementById('Teclat').hidden;" title="Mostra o Amaga"> 
